# hypdelta

./: LICENSE  README.md  experiments.ipynb  local_tests.py  pyproject.toml  requirements.txt  setup.py  try.ipynb
.github/workflows/: linter.yml  tests.yml
delta/: experiments.ipynb
delta/hypdelta/: hypdelta.py  hypdelta_naive.py
hypdelta/: __init__.py  calculus_utils.py  cartesian.py  condensed.py  cudaprep.py  fast.py  hypdalta_main.py  hypdelta.py  hypdelta_cartesian.py  hypdelta_fast.py  hypdelta_naive.py  naive.py  utils.py
hyppy/: __init__.py  calculus_utils.py  fast.py  hypdalta_main.py
notebooks/: experiments.ipynb
src/hypdelta/: ___init__.py  __init__.py  calculus_utils.py  cartesian.py  condensed.py  cudaprep.py  delta.py  fast.py  main.py  naive.py
src/hyppy/: __init__.py  cartesian.py  condensed.py  hypdalta_main.py  naive.py
tests/: test_delta_methods.py  utils.py
